# your-life-in-weeks

./: .gitignore  LICENSE  README.md  simple-toothbrush.cabal  your-life-in-weeks.cabal
src/: DrawDiagram.hs  Main.hs
