name:                simple-toothbrush
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rleppink/simple-toothbrush#readme
license:             BSD3
license-file:        LICENSE
author:              Ronald Leppink
maintainer:          ronaldleppink@gmail.com
copyright:           Copyright (c) 2017 Ronald Leppink
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable simple-toothbrush
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , diagrams-lib
                     , diagrams-svg
                     , Rasterific
                     , time
