name:                your-life-in-weeks
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rleppink/your-life-in-weeks#readme
license:             BSD3
license-file:        LICENSE
author:              Ronald Leppink
maintainer:          ronaldleppink@gmail.com
copyright:           Copyright (c) 2017 Ronald Leppink
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable yliw
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , diagrams-lib
                     , diagrams-rasterific
                     , optparse-generic
                     , time
